fixing thème reference & misc styling

--- a/ryan.moore.site-web/src/main/webapp/site/css/home.css
+++ b/ryan.moore.site-web/src/main/webapp/site/css/home.css
@@ -16,5 +16,6 @@
     line-height:13px;
     color:#808080;
 } .gaeButtonDiv {
-    margin-left: 80%
+    padding-top: 5px;
+    margin-left: 86%
 }
