--- a/ryan.moore.site-web/src/main/webapp/site/css/home.css
+++ b/ryan.moore.site-web/src/main/webapp/site/css/home.css
@@ -1,7 +1,15 @@
-#homeDiv {
+.logo {
     margin-left: auto;
     margin-right: auto;
-    width: 95%;
+    width:85.5%;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    height: 70px;
+    border: 1px solid #DDD;
+} #homeDiv {
+    margin-left: auto;
+    margin-right: auto;
+    width: 85%;
 }.accordion {
     margin-left: auto;
     margin-right: auto;
@@ -14,8 +22,10 @@
     font-size:12px;
     font-weight:normal;
     line-height:13px;
+    margin-top: auto;
+    margin-bottom:15px;
     color:#808080;
 } .gaeButtonDiv {
     padding-top: 5px;
-    margin-left: 86%
+    margin-left: 82%
 }
